<resources>
    <string name="app_name">Calculadora</string>
    <string name="titulo">Calculadora</string>
    <string name="operaciones">Operaciones</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="primer_numero">Primer Numero</string>
    <string name="segundo_numero">Segundo Numero</string>
    <string name="error_uno">Digite el numero uno</string>
    <string name="error_dos">Digte el numero dos</string>
    <string name="error_tres">No puede Dividir entre 0</string>
    <string-array name="opciones">
        <item>@string/sumar</item>
        <item>@string/restar</item>
        <item>@string/multiplicar</item>
        <item>@string/dividir</item>
    </string-array>
</resources>
